--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Recipes</h1>
+
+    <ul>
+        <li><a href="Pages/tacos.html">Tacos Recipe</a></li>
+        <li><a href="Pages/pizza.html">Pizza Recipe</a></li>
+    </ul>
 </body>
 </html>
